[gd_scene load_steps=9 format=3 uid="uid://b7wuosv0fkmak"]

[ext_resource type="Script" uid="uid://cii17ctplkach" path="res://main_menu.gd" id="1_iopmd"]
[ext_resource type="AudioStream" uid="uid://d8owusf5kta3" path="res://resources/audio/open_music.mp3" id="2_4xc5i"]
[ext_resource type="StyleBox" uid="uid://by18p7c0e67l1" path="res://textures/start_button.tres" id="4_yt2kv"]
[ext_resource type="StyleBox" uid="uid://coj3wqxfehwtp" path="res://textures/start_button_pressed.tres" id="5_wvmvo"]
[ext_resource type="Texture2D" uid="uid://bur37y3qm5san" path="res://resources/UI_pictures/ui_main_mail.png" id="6_xacg5"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_glbon"]
load_path = "res://.godot/imported/main_ui_set.png-9e8e2d7fa10653cd42ef36a127b8b8c5.ctex"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gsjvs"]
bg_color = Color(0.192157, 0.192157, 0.192157, 0.862745)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.176471)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.294118)
shadow_size = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0p2m"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.862745)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.176471)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.294118)
shadow_size = 8
shadow_offset = Vector2(2, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iopmd")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
autoplay = true
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4xc5i")
autoplay = true

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 0.95
offset_left = -55.8
offset_top = -87.8
offset_right = -85.2
offset_bottom = -102.6
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("4_yt2kv")
theme_override_styles/hover = ExtResource("4_yt2kv")
theme_override_styles/pressed = ExtResource("5_wvmvo")
theme_override_styles/normal = ExtResource("4_yt2kv")
text = "开始游戏"

[node name="AnnouncementButton" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.05
anchor_right = 0.98
anchor_bottom = 0.11
offset_left = -879.84
offset_top = 120.6
offset_right = -879.84
offset_bottom = 120.6
grow_horizontal = 0
size_flags_horizontal = 8
texture_normal = ExtResource("6_xacg5")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.15
anchor_right = 0.98
anchor_bottom = 0.21
offset_left = -941.84
offset_top = 53.8
offset_right = -817.96
offset_bottom = 209.92
grow_horizontal = 0
size_flags_horizontal = 8
texture_normal = SubResource("CompressedTexture2D_glbon")
ignore_texture_size = true
stretch_mode = 5

[node name="AnnouncementPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -25.0
offset_right = 30.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 8)
theme_override_styles/panel = SubResource("StyleBoxFlat_gsjvs")

[node name="Title" type="Label" parent="UI/AnnouncementPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.5
offset_top = 2.0
offset_right = 12.5
offset_bottom = 6.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "公告栏"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="RichTextLabel" parent="UI/AnnouncementPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -12.5
offset_right = 25.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
text = "欢迎来到《职场苏丹》！

本游戏正在开发中，敬请期待更多内容。

开发团队将在此处发布游戏更新公告和活动信息。"

[node name="CloseButton" type="Button" parent="UI/AnnouncementPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -7.0
offset_right = 5.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "关闭"

[node name="SettingsPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -17.5
offset_right = 25.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
theme_override_styles/panel = SubResource("StyleBoxFlat_c0p2m")

[node name="Title" type="Label" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.5
offset_top = 2.0
offset_right = 12.5
offset_bottom = 6.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeLabel" type="Label" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.23
anchor_right = 0.4
anchor_bottom = 0.31
text = "音量："

[node name="VolumeSlider" type="HSlider" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.24
anchor_right = 0.8
anchor_bottom = 0.33
value = 80.0

[node name="FullscreenLabel" type="Label" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.37
anchor_right = 0.48
anchor_bottom = 0.45
text = "全屏模式："

[node name="FullscreenCheck" type="CheckBox" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.36
anchor_right = 0.52
anchor_bottom = 0.47

[node name="ConfirmButton" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "确认"

[node name="CancelButton" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -7.0
offset_right = 11.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "取消"
